# FrizzXX

./: .clang-format  .gitignore  CMakeLists.txt
Debug/: makefile
Debug/src/: subdir.mk
src/: abstract_syntax_trees.cpp  abstract_syntax_trees.h  context_parser.cpp  context_parser.h  context_runner.cpp  context_runner.h  expressions.cpp  expressions.h  file_utility.cpp  file_utility.h  frizz++.cpp  frizz_config.cpp  frizz_config.h  lexer.cpp  lexer.h  md_preprocessor.cpp  md_preprocessor.h  parser.cpp  parser.h  processor.hpp  runner.cpp  runner.h  structures.cpp  structures.h  syntax_tree_visitors.cpp
tests/: CMakeLists.txt  Frizz++_tests.cpp  abstract_syntax_tree_tests.cpp  config_tests.cpp  file_util_tests.cpp  lexer_file_tests.cpp  lexer_tests.cpp  parser_tests.cpp  processor_tests.cpp  runner_tests.cpp  structure_tests.cpp  syntax_tree_visitor_tests.cpp  test_helpers.cpp  test_helpers.h
tests/test_files/: test1.md
tests/test_files/config/: test1.json  test2.json
tests/test_files/content/posts/: post1.md  post2.md  post3.md
tests/test_files/partials/: contextual_partial.md  test1.md
tests/test_files/partials/posts/: post1.md  post2.md
tests/test_files/sources/: for_loop.md
